Adding changes to site

--- a/about.html
+++ b/about.html
@@ -44,6 +44,8 @@
     <main>
         <section class="about">
             <div class="about_bio-image">
+                <img class="profile-pic" src="dist/imgs/me.JPG">
+
                 <div class="about_bio">
                     <h2 class="text-secondary">BIO</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas perferendis esse, voluptas tempora maxime quis provident mollitia omnis laborum explicabo.</p>
@@ -76,13 +78,13 @@
                     <i class="fab fa-twitter fa-2x"></i>    
                 </a>
                 <a href="#">
-                    <i class="fab fa-facebook fa-2x"></i>    
-                </a>
-                <a href="#">
                     <i class="fab fa-instagram fa-2x"></i>    
                 </a>
                 <a href="#">
                     <i class="fab fa-github fa-2x"></i>    
+                </a>
+                <a href="https://www.linkedin.com/in/callum-macalast-aa5497184/" target="_blank">
+                    <i class="fab fa-linkedin fa-2x"></i>
                 </a>
             </div>
             <footer>&copy; Copyright 2019</footer>
