--- a/contact.html
+++ b/contact.html
@@ -63,17 +63,17 @@
            </div>
                     
             <div class="social-icons">
-                <a href="#">
+                <a href="">
                     <i class="fab fa-twitter fa-2x"></i>    
-                </a>
-                <a href="#">
-                    <i class="fab fa-facebook fa-2x"></i>    
                 </a>
                 <a href="#">
                     <i class="fab fa-instagram fa-2x"></i>    
                 </a>
                 <a href="#">
                     <i class="fab fa-github fa-2x"></i>    
+                </a>
+                <a href="https://www.linkedin.com/in/callum-macalast-aa5497184/" target="_blank">
+                    <i class="fab fa-linkedin fa-2x"></i>
                 </a>
             </div>
             <footer>&copy; Copyright 2019</footer>
