--- a/projects.html
+++ b/projects.html
@@ -75,9 +75,9 @@
                 <div class="projects_item">
                     <img src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" alt="My Project">
                     <div class="projects_btns">
-                        <a href="#" class="projects_btn">
+                        <!-- <a href="#" class="projects_btn">
                             <i class="fas fa-eye"></i> Preview
-                        </a>
+                        </a> -->
                         <a href="#!" class="projects_btn">
                             <i class="fab fa-github"></i> Github
                         </a>
@@ -123,16 +123,16 @@
                     <i class="fab fa-twitter fa-2x"></i>    
                 </a>
                 <a href="#">
-                    <i class="fab fa-facebook fa-2x"></i>    
-                </a>
-                <a href="#">
                     <i class="fab fa-instagram fa-2x"></i>    
                 </a>
                 <a href="#">
                     <i class="fab fa-github fa-2x"></i>    
                 </a>
+                <a href="https://www.linkedin.com/in/callum-macalast-aa5497184/" target="_blank">
+                    <i class="fab fa-linkedin fa-2x"></i>
+                </a>
             </div>
-            <footer>&copy; Copyright 2019</footer>
+            <footer>&copy; Callum Macalast<script></script></footer>
         </section>
     </main>
             
