updating the images and icon hrefs

--- a/about.html
+++ b/about.html
@@ -44,11 +44,11 @@
     <main>
         <section class="about">
             <div class="about_bio-image">
-                <img class="profile-pic" src="dist/imgs/me.JPG">
+                <!-- <img class="profile-pic" src="dist/imgs/me.JPG"> -->
 
                 <div class="about_bio">
                     <h2 class="text-secondary">BIO</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas perferendis esse, voluptas tempora maxime quis provident mollitia omnis laborum explicabo.</p>
+                    <p>My name is Callum Macalast. I am a self-taught web develper from Pembrokeshire, Wales.</p>
             </div>
         </div>
 
