--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 
     <main>
         <section class="home">
-            <h2>Hi! My Name Is</h2>
             <h1 class="home_name">
                 Callum <span class="home_name--last">Macalast</span>
             </h1>
             <h2>
-                Web Developer, Designer & Programmer
+                Self-Taught Web Developer
             </h2>
+            <a href="./projects.html" class="my-work">My projects</a>
 
             <div class="social-icons">
                 <a href="#">
@@ -65,7 +65,7 @@
                     <i class="fab fa-linkedin fa-2x"></i>
                 </a>
             </div>
-            <footer>&copy; Copyright 2019</footer>
+            <footer id="home-date">&copy; Copyright 2019</footer>
         </section>
     </main>
 
