--- a/contact.html
+++ b/contact.html
@@ -56,10 +56,10 @@
                    <i class="fas fa-mobile-alt"></i>Phone 
                    <div class="text-secondary">077771213212</div>
                </div>
-               <div class="contact_address">
+               <!-- <div class="contact_address">
                 <i class="fas fa-map-marker"></i>Address
                    <div class="text-secondary">12 happy street. Houstom. Texas</div>
-               </div>
+               </div> -->
            </div>
                     
             <div class="social-icons">
@@ -76,7 +76,11 @@
                     <i class="fab fa-linkedin fa-2x"></i>
                 </a>
             </div>
-            <footer>&copy; Copyright 2019</footer>
+            <footer>
+                <div class="footer-date">
+                    <!-- &copy; Copyright 20 -->
+                </div>
+            </footer>
         </section>
     </main>
             
