Updating the content of the projects section

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             
-            <div class="social-icons">
+            <!-- <div class="social-icons">
                 <a href="#">
                     <i class="fab fa-twitter fa-2x"></i>    
                 </a>
@@ -86,8 +86,8 @@
                 <a href="https://www.linkedin.com/in/callum-macalast-aa5497184/" target="_blank">
                     <i class="fab fa-linkedin fa-2x"></i>
                 </a>
-            </div>
-            <footer>&copy; Copyright 2019</footer>
+            </div> -->
+            <footer></footer>
         </section>
     </main>
             
