--- a/projects.html
+++ b/projects.html
@@ -60,18 +60,22 @@
                             <i class="fab fa-github"></i> Github
                         </a>
                     </div>
+                    A Content Management System providing the user a professional feel to dynamically updating their content. This website has been developed for a small independent business located in Pemnbrokeshire, West Wales.
                 </div>
+
                 <div class="projects_item">
-                    <img src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" alt="My Project">
+                    <img src="./dist/imgs/Screenshot 2020-05-19 at 18.24.15.png" height="145px" alt="My Project">
                     <div class="projects_btns">
                         <!-- <a href="#" class="projects_btn">
                             <i class="fas fa-eye"></i> Preview
                         </a> -->
-                        <a href="#!" class="projects_btn">
+                        <a href="https://github.com/callummacalast/TodoApp" target="_blank" class="projects_btn">
                             <i class="fab fa-github"></i> Github
                         </a>
                     </div>
+                    <p>Here is a todo app created with HTML, JavaScript and CSS. The app provides a simple UI offering an ease of access to the end user.</p>
                 </div>
+
                 <div class="projects_item">
                     <img src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" alt="My Project">
                     <div class="projects_btns">
@@ -117,21 +121,21 @@
                     </div>
                 </div> -->
             </div>
-                    
+<!--                     
             <div class="social-icons">
                 <a href="#">
                     <i class="fab fa-twitter fa-2x"></i>    
                 </a>
-                <a href="#">
+                <!-- <a href="#">
                     <i class="fab fa-instagram fa-2x"></i>    
-                </a>
-                <a href="#">
+                </a> -->
+                <!-- <a href="#">
                     <i class="fab fa-github fa-2x"></i>    
                 </a>
                 <a href="https://www.linkedin.com/in/callum-macalast-aa5497184/" target="_blank">
                     <i class="fab fa-linkedin fa-2x"></i>
                 </a>
-            </div>
+            </div> --> 
             <footer class="footer-date">&copy; Callum Macalast<script type="text/javascript">
             </script></footer>
         </section>
