--- a/contact.html
+++ b/contact.html
@@ -50,12 +50,12 @@
            <div class="contact_list">
                <div class="contact_email">
                    <i class="fas fa-envelope"></i>Email 
-                   <div class="text-secondary">callummacalast@gmail.com</div>
+                   <div class="text-secondary"><a class="email-me" href="mailto:callummacalast@gmail.com">callummacalast@gmail.com</a></div>
                </div>
-               <div class="contact_phone">
+               <!-- <div class="contact_phone">
                    <i class="fas fa-mobile-alt"></i>Phone 
                    <div class="text-secondary">077771213212</div>
-               </div>
+               </div> -->
                <!-- <div class="contact_address">
                 <i class="fas fa-map-marker"></i>Address
                    <div class="text-secondary">12 happy street. Houstom. Texas</div>
@@ -66,9 +66,9 @@
                 <a href="">
                     <i class="fab fa-twitter fa-2x"></i>    
                 </a>
-                <a href="#">
+                <!-- <a href="#">
                     <i class="fab fa-instagram fa-2x"></i>    
-                </a>
+                </a> -->
                 <a href="#">
                     <i class="fab fa-github fa-2x"></i>    
                 </a>
