--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                 <a href="#">
                     <i class="fab fa-twitter fa-2x"></i>    
                 </a>
-                <a href="#">
+                <!-- <a href="#">
                     <i class="fab fa-instagram fa-2x"></i>    
-                </a>
+                </a> -->
                 <a href="#">
                     <i class="fab fa-github fa-2x"></i>    
                 </a>
