--- a/about.html
+++ b/about.html
@@ -54,12 +54,12 @@
 
             <div class="jobs">
                 <div class="jobs_job">
-                    <h2 class="text-secondary">2017 - Current</h2>
-                    <h3>Google</h3>
-                    <h6>Full Stack Developer</h6>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi, natus.</p>
+                    <!-- <h2 class="text-secondary">2017 - Current</h2> -->
+                    <!-- <h3>Google</h3> -->
+                    <!-- <h6>Full Stack Developer</h6> -->
+                    <p>I have a passion for web development, learning code and creating great websites. From 2018 I have been learning to code with various different langauges.</p>
                 </div>
-                <div class="jobs_job">
+                <!-- <div class="jobs_job">
                     <h2 class="text-secondary">2015 - 2017</h2>
                     <h3>Microsoft</h3>
                     <h6>Front-end Developer</h6>
@@ -70,7 +70,7 @@
                     <h3>Web Design Co.</h3>
                     <h6>Graphic Designer</h6>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi, natus.</p>
-                </div>
+                </div> -->
             </div>
             
             <!-- <div class="social-icons">
