pushing some minor changes

--- a/about.html
+++ b/about.html
@@ -47,8 +47,8 @@
                 <!-- <img class="profile-pic" src="dist/imgs/me.JPG"> -->
 
                 <div class="about_bio">
-                    <h2 class="text-secondary">BIO</h2>
-                    <p>My name is Callum Macalast. I am a self-taught web develper from Pembrokeshire, Wales.</p>
+                    <h2 class="text-secondary">ME</h2>
+                    <p>I am a self-taught web develper.</p>
             </div>
         </div>
 
@@ -57,7 +57,9 @@
                     <!-- <h2 class="text-secondary">2017 - Current</h2> -->
                     <!-- <h3>Google</h3> -->
                     <!-- <h6>Full Stack Developer</h6> -->
-                    <p>I have a passion for web development, learning code and creating great websites. From 2018 I have been learning to code with various different langauges.</p>
+                    <p>I have been creating websites for the past 2 years, learning various front-end and back-end languages. I am currently on the search for a junior web developer position in order to develop my career as a web developer.
+                        
+                    </p>
                 </div>
                 <!-- <div class="jobs_job">
                     <h2 class="text-secondary">2015 - 2017</h2>
