--- a/index.html
+++ b/index.html
@@ -52,13 +52,7 @@
             <a href="./projects.html" class="my-work">My projects</a>
 
             <div class="social-icons">
-                <a href="#">
-                    <i class="fab fa-twitter fa-2x"></i>    
-                </a>
-                <!-- <a href="#">
-                    <i class="fab fa-instagram fa-2x"></i>    
-                </a> -->
-                <a href="#">
+                <a href="https://github.com/callummacalast" target="_blank">
                     <i class="fab fa-github fa-2x"></i>    
                 </a>
                 <a href="https://www.linkedin.com/in/callum-macalast-aa5497184/" target="_blank">
