changes to pages

--- a/about.html
+++ b/about.html
@@ -57,7 +57,8 @@
                     <!-- <h2 class="text-secondary">2017 - Current</h2> -->
                     <!-- <h3>Google</h3> -->
                     <!-- <h6>Full Stack Developer</h6> -->
-                    <p>I have been creating websites for the past 2 years, learning various front-end and back-end languages. I am currently on the search for a junior web developer position in order to develop my career as a web developer.
+                    <p>I have been creating websites for the past 3 years, learning various front-end and back-end languages. Web development is a passion of mine, learning new technologies is something I look forward too. 
+                        I have worked on some exciting projects throughout my career, from PHP developed websites to JavaScript based websites. Please see the contact page to get in touch!
                         
                     </p>
                 </div>
