--- a/projects.html
+++ b/projects.html
@@ -88,6 +88,24 @@
                     </div>
                     <p>Here is a JavaScript project fetching an API from a given source. This project utilieses async JavaScript. This project is a code along from a Udemy course.</p>
                 </div>
+                <div class="projects_item">
+                    <img src="./dist/imgs/Screenshot 2020-09-13 at 17.21.09.png" height="145px" alt="My Project">
+                    <div class="projects_btns">
+                        <a href="https://github.com/callummacalast/PigGame" target="_blank" class="projects_btn">
+                            <i class="fab fa-github"></i> Github
+                        </a>
+                    </div>
+                    <p>Pig game. This project utilieses HTML, CSS and JavaScript to create a game with two players. This project utilises the concept of DOM manipulation and event handlers in order to create..</p>
+                </div>
+                <div class="projects_item">
+                    <img src="./dist/imgs/Screenshot 2020-09-13 at 20.32.58.png" height="145px" alt="My Project">
+                    <div class="projects_btns">
+                        <a href="https://github.com/callummacalast/SnakeGameJS" target="_blank" class="projects_btn">
+                            <i class="fab fa-github"></i> Github
+                        </a>
+                    </div>
+                    <p>Snake. This project replicates the traditional game 'Snake', using JavaScript, HTML and CSS. This project utilises the concept of DOM manipulation and event handlers in order to create..</p>
+                </div>
             </div>
 
             
