Added google ad sense

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="scss/main.css">
+    <script data-ad-client="ca-pub-7250932286392115" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script src="https://kit.fontawesome.com/c5a3b5b538.js" crossorigin="anonymous"></script>
 
     <title>Callum Macalast</title>
@@ -49,6 +50,10 @@
             <h2>
                 Self-Taught Web Developer
             </h2>
+            <p class="description_self--taught">I have been creating websites for the past 3 years, learning various front-end and back-end languages. Web development is a passion of mine, learning new technologies is something I look forward too. 
+                I have worked on some exciting projects throughout my career, from PHP developed websites to JavaScript based websites. Please see the contact page to get in touch!
+                
+            </p>
             <a href="./projects.html" class="my-work">My projects</a>
 
             <div class="social-icons">
